# open-data-explorer

./: .gitignore  pyproject.toml
open_data_explorer/models/: search_queries.py  search_results.py
open_data_explorer/prompts/: dataset_selection.j2  search_queries.j2
open_data_explorer/queries/: query.py  query_runner.py
open_data_explorer/socrata/: search_result_model.py  searcher.py
tests/queries/: query_runner_test.py
