[tool.poetry]
name = "open-data-explorer"
version = "0.1.0"
description = ""
authors = ["Yuri Bogomolov <bogomoloviura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
pydantic = "^2.9.2"
openai = "^1.52.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
